--- a/matcha-client/index.html
+++ b/matcha-client/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>MATCHA</title>
+     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/grundschrift" type="text/css"/> 
   </head>
   <body>
     <div id="app"></div>
